unpackaged/main/default/objects/OpportunityItemSplit__c/OpportunityItemSplit__c.object-meta.xml
<CustomObject>
    <description>Opportunity Item Split from OpportunityLineItem and OpportunityModuleItem based on GL Product Connector Percentage in Product2 mapping table</description>
    <label>Opportunity Item Split</label>
    <nameField>
        <label>OpportunityItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Item Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>