unpackaged/main/default/objects/OpportunityItemSplit__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <formula>CASE(TEXT(Opportunity__r.Licence_Model__c), 
&#39;Perpetual&#39;, Amount__c * 0.225,
&#39;Subscription&#39;, Amount__c * 0.225,
&#39;Term&#39;, Amount__c * 0.225,
&#39;Perpetual &amp; Cloud Uplift&#39;,Amount__c * 0.225,
&#39;SaaS&#39; , Amount__c * 0.225+Amount__c/4,
&#39;SaaS Flip&#39;, Amount__c * 0.225+Amount__c/4,
 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>