unpackaged/main/default/objects/OpportunityItemSplit__c/fields/AUD_Amount__c.field-meta.xml
<CustomField>
    <fullName>AUD_Amount__c</fullName>
    <description>Calculate Product Amount from dated conversion rate</description>
    <label>AUD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>