unpackaged/main/default/objects/OpportunityItemSplit__c/fields/Connector_Percent__c.field-meta.xml
<CustomField>
    <fullName>Connector_Percent__c</fullName>
    <label>Connector Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>