unpackaged/main/default/objects/OpportunityItemSplit__c/fields/GL_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>GL_Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Application Development Framework</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Business Process Management</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>HR &amp; Payroll</fullName>
            </value>
            <value>
                <fullName>Inactive Product</fullName>
            </value>
            <value>
                <fullName>Not in Use</fullName>
            </value>
            <value>
                <fullName>Performance Planning</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Spatial</fullName>
            </value>
            <value>
                <fullName>Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>Student Management</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
            <value>
                <fullName>T1 Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>