unpackaged/main/default/objects/OpportunityItemSplit__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <label>Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connector Product Price</fullName>
            </value>
            <value>
                <fullName>GL Product Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>