unpackaged/main/default/objects/OpportunityItemSplit__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Item Splits</relationshipLabel>
    <relationshipName>OpportunityItemSplits</relationshipName>
    <type>Lookup</type>
</CustomField>